Quickfix to button colors

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,7 +178,7 @@ h3 {
 
 .btn-yellow {
   color: $white;
-  background: $orange;
+  background: $yellow;
   padding: 15px 20px;
   border-radius: 20px;
   display: inline-block;
@@ -299,7 +299,7 @@ h3 {
       height: 60px;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      background: $orange;
+      background: $yellow;
       color: $white;
       text-transform: uppercase;
       font-weight: bold;
